# proyecto-imagenes

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  justfile  tailwind.config.js
public/assets/: tailwind.css
src/: constants.rs  diffcon.py  foo.py  icons.rs  main.rs
src/python/: cars.xml  diffcon.py  haar.py
