[package]
name = "proyecto"
version = "0.1.0"
authors = ["Alejandro Osornio <50227494+AOx0@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
#dioxus-web = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus.git" }

log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
base64 = "0.13.1"
opencv = "0.73.0"
