[package]
name = "proyecto"
version = "0.1.0"
authors = ["Alejandro Osornio <50227494+AOx0@users.noreply.github.com>"]
edition = "2021"

[dependencies]

# Core dependencies
anyhow = "1.0.66"
directories = "4.0.1"

# Console dependencies
clap = { version = "4.0.28", features = ["derive"], optional = true }

# OpenCV binding
pyo3 = { version = "0.17.3", optional = true }
opencv = { version = "0.62.0", optional = true }

# UI dependencies
dioxus = { git = "https://github.com/dioxuslabs/dioxus.git", optional = true }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus.git", optional = true }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus.git", optional = true }

base64 = { version = "0.13.1", optional = true }
rfd = { version = "0.10.0", optional = true }

[features]
default = ["ui", "console", "opencv-python"]
console = ["clap"]
ui = ["dioxus-desktop", "dioxus-router", "dioxus", "rfd", "base64"]
opencv-metal = ["opencv"]
opencv-python = ["pyo3"]